infrastructure/serviceMesh/istio-manifest.yaml
NAME: istio-operator
LAST DEPLOYED: Fri Mar 12 01:13:36 2021
NAMESPACE: istio-system
STATUS: pending-install
REVISION: 1
TEST SUITE: None
HOOKS:
MANIFEST:
---
# Source: istio-operator/templates/authproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-operator-authproxy
  namespace: istio-system
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: istio-operator
    helm.sh/chart: istio-operator-0.0.79
    app.kubernetes.io/instance: istio-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 0.9.1
    app.kubernetes.io/component: authproxy
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: istio-operator
    app.kubernetes.io/instance: istio-operator
    app.kubernetes.io/component: operator
---
# Source: istio-operator/templates/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "istio-operator"
  namespace: istio-system
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: istio-operator
    helm.sh/chart: istio-operator-0.0.79
    app.kubernetes.io/instance: istio-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 0.9.1
    app.kubernetes.io/component: operator
spec:
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: istio-operator
    app.kubernetes.io/instance: istio-operator
    app.kubernetes.io/component: operator
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 9443
---
# Source: istio-operator/templates/operator-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "istio-operator"
  namespace: istio-system
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: istio-operator
    helm.sh/chart: istio-operator-0.0.79
    app.kubernetes.io/instance: istio-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 0.9.1
    app.kubernetes.io/component: operator
spec:
  selector:
    matchLabels:
      control-plane: controller-manager
      controller-tools.k8s.io: "1.0"
      app.kubernetes.io/name: istio-operator
      app.kubernetes.io/instance: istio-operator
      app.kubernetes.io/component: operator
  serviceName: istio-operator
  template:
    metadata:
      labels:
        control-plane: controller-manager
        controller-tools.k8s.io: "1.0"
        app.kubernetes.io/name: istio-operator
        app.kubernetes.io/instance: istio-operator
        app.kubernetes.io/component: operator
    spec:
      serviceAccountName: istio-operator
      securityContext:
        fsGroup: 1337
      terminationGracePeriodSeconds: 60
      containers:
      - name: kube-rbac-proxy
        image: "gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0"
        imagePullPolicy: IfNotPresent
        args:
          - "--secure-listen-address=0.0.0.0:8443"
          - "--upstream=http://127.0.0.1:8080/"
          - "--logtostderr=true"
          - "--v=10"
        ports:
          - containerPort: 8443
            name: https
      - command:
        - /manager
        image: "ghcr.io/banzaicloud/istio-operator:0.9.1"
        imagePullPolicy: IfNotPresent
        name: manager
        args:
          - "--metrics-addr=127.0.0.1:8080"
          - "--watch-created-resources-events=true"
          - "--leader-election-enabled"
          - "--leader-election-name=istio-operator-leader"
          - "--leader-election-namespace=istio-system"
          - "--webhook-name=istio-operator-webhook"
          - "--webhook-service-address=istio-operator.istio-system.svc"
        ports:
        - containerPort: 443
          name: webhook-server
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
        securityContext:
          runAsUser: 1337
          runAsGroup: 1337
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
---
# Source: istio-operator/templates/operator-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: istio-operator
    helm.sh/chart: istio-operator-0.0.79
    app.kubernetes.io/instance: istio-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 0.9.1
    app.kubernetes.io/component: webhook
  name: "istio-operator-webhook"
webhooks:
- clientConfig:
    service:
      name: "istio-operator"
      namespace: istio-system
      path: /validate-istio-config
  failurePolicy: Ignore
  matchPolicy: Exact
  name: istio.validation.banzaicloud.io
  rules:
  - apiGroups:
    - istio.banzaicloud.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    resources:
    - istios
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
  admissionReviewVersions: ["v1beta1", "v1"]
